# hermes-lite

./: .dockerignore  .env.example  .envrc  .gitignore  .hadolint.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  RELEASE_v0.15.1.md  SECURITY.md  UPSTREAM_SYNC.md  batch_runner.py  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.windows.yml  docker-compose.yml  flake.nix  hermes_constants.py  hermes_logging.py  hermes_state.py  marlow  marlow-already-has-routines.md  marlow_bootstrap.py  marlow_constants.py  marlow_logging.py  marlow_state.py  marlow_time.py  mcp_oauth.py  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  run_agent.py  setup-marlow.sh  toolsets.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.plans/: admin-action-intents.md  approved-feature-cleanup.md  hermes-lite-cleanup.md  marlow-rename.md  openai-api-server.md  preservation-first-cleanup.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  events.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_persistence.py  credential_pool.py  credential_sources.py  curator.py  curator_backup.py  display.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_code_assist.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  jiter_preload.py  learn_prompt.py  learning_graph.py  (+37 more)
cron/: __init__.py  blueprint_catalog.py  jobs.py  scheduler.py  suggestion_catalog.py  suggestions.py
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  trajectory_compression.yaml  web_research.yaml
docker/: SOUL.md  entrypoint.sh  hermes-exec-shim.sh  main-wrapper.sh  marlow-exec-shim.sh  stage2-hook.sh
docs/: admin-approvals.md  mcp-http-server.md  telegram-digital-twin.md  telegram-group-access.md  work-experience-memory-system.md
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  display_config.py  group_access.py  hooks.py  memory_monitor.py  mirror.py  pairing.py  platform_registry.py  restart.py  run.py  runtime_footer.py  session.py  session_context.py  shutdown_forensics.py  status.py  sticker_cache.py  stream_consumer.py  stream_events.py  whatsapp_identity.py
hermes_cli/: __init__.py  _parser.py  auth.py  auth_commands.py  banner.py  browser_connect.py  clipboard.py  codex_models.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  commands.py  config.py  cron.py  curator.py  dep_ensure.py  doctor.py  dump.py  env_loader.py  experience.py  fallback_cmd.py  fallback_config.py  gateway.py  goals.py  hooks.py  inventory.py  journey.py  logs.py  main.py  managed_uv.py  mcp_catalog.py  mcp_config.py  memory_setup.py  model_catalog.py  model_normalize.py  model_switch.py  models.py  oneshot.py  platforms.py  plugins.py  plugins_cmd.py  (+21 more)
locales/: af.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  ga.yaml  hu.yaml  it.yaml  ja.yaml  ko.yaml  pt.yaml  ru.yaml  tr.yaml  uk.yaml  zh-hant.yaml  zh.yaml
marlow_cli/: __init__.py  _parser.py  _subprocess_compat.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  blueprint_cmd.py  browser_connect.py  build_info.py  bundles.py  callbacks.py  checkpoints.py  claw.py  cli_output.py  clipboard.py  codex_models.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  colors.py  commands.py  completion.py  config.py  container_boot.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  debug.py  default_soul.py  dep_ensure.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  experience.py  fallback_cmd.py  gateway.py  gateway_windows.py  (+57 more)
nix/: checks.nix  configMergeScript.nix  devShell.nix  hermes-agent.nix  lib.nix  marlow-agent.nix  nixosModules.nix  overlays.nix  packages.nix  python.nix  tui.nix  web.nix
optional-skills/: DESCRIPTION.md
plans/: gemini-oauth-provider.md
plugins/: __init__.py
providers/: README.md  __init__.py  base.py
scripts/: LIVETEST_README.md  benchmark_browser_eval.py  build_model_catalog.py  build_skills_index.py  check-windows-footguns.py  contributor_audit.py  discord-voice-doctor.py  hermes-gateway  install.cmd  install.ps1  install.sh  install_psutil_android.py  keystroke_diagnostic.py  kill_modal.sh  marlow-gateway  pr4_eval_harness.py  profile-tui.py  release.py  run_tests.sh  run_tests_parallel.py  sample_and_compress.py  setup_open_webui.sh  tool_search_livetest.py
tests/: conftest.py  test_agent.py  test_atomic_replace_symlinks.py  test_bitwarden_secrets.py  test_cli.py  test_cli_manual_compress.py  test_cli_skin_integration.py  test_config.py  test_ctx_halving_fix.py  test_docker_home_override_scripts.py  test_dockerfile_tini_compat_shim.py  test_empty_model_fallback.py  test_env_loader_secret_sources.py  test_gateway_streaming_nested_config.py  test_hermes_logging.py  test_hermes_state.py  test_hermes_state_wal_fallback.py  test_honcho_session_context.py  test_install_sh_browser_install.py  test_install_sh_legacy_migration.py  test_install_sh_pythonpath_sanitization.py  test_install_sh_root_fhs_uv_python_path.py  test_install_sh_symlink_stomp.py  test_interprocess_file_lock.py  test_ipv4_preference.py  test_lazy_session_regressions.py  test_live_system_guard_self_test.py  test_logging.py  test_marlow_bootstrap.py  test_marlow_constants.py  test_marlow_home_profile_warning.py  test_marlow_logging.py  test_marlow_state.py  test_marlow_state_compression_locks.py  test_marlow_state_wal_fallback.py  (+26 more)
(+1465 files in other folders)
