[build-system]
requires = ["setuptools>=82,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "0.15.1"
description = "A small local coding agent for OpenAI-compatible models."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "httpx>=0.28.1,<0.29",
  "openai>=2.28,<3",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.10",
]

[project.scripts]
hermes = "hermes_cli.main:main"
hermes-agent = "run_agent:main"

[tool.setuptools]
py-modules = [
  "cli",
  "hermes_constants",
  "hermes_logging",
  "hermes_state",
  "model_tools",
  "run_agent",
  "toolsets",
]

[tool.setuptools.package-data]
plugins = ["**/plugin.yaml"]

[tool.setuptools.packages.find]
include = [
  "agent",
  "agent.*",
  "hermes_cli",
  "plugins",
  "plugins.*",
  "providers",
  "providers.*",
  "tools",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
